add new features controller

--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'war'
 }
 
 group = 'pl.zajavka'
@@ -8,7 +9,6 @@ sourceCompatibility = '17'
 
 repositories {
     mavenCentral()
-    maven {url 'https://repo.spring.io/milestone'}
 }
 
 dependencies {
@@ -29,6 +29,11 @@ dependencies {
     implementation "org.springframework:spring-tx:$springVersion"
     implementation "org.springframework.data:spring-data-jpa:$springDataVersion"
 
+    compileOnly "jakarta.platform:jakarta.jakartaee-api:$jakartaApiVersion"
+    implementation "org.springframework:spring-webmvc:$springVersion"
+    implementation "org.thymeleaf:thymeleaf:$thymeleafVersion"
+    implementation "org.thymeleaf:thymeleaf-spring6:$thymeleafVersion"
+
     implementation "org.hibernate.orm:hibernate-core:$hibernateVersion"
     implementation "org.hibernate.orm:hibernate-hikaricp:$hibernateVersion"
     implementation "com.zaxxer:HikariCP:$hikariVersion"
@@ -38,14 +43,10 @@ dependencies {
     testCompileOnly "org.projectlombok:lombok:$lombokVersion"
     testAnnotationProcessor "org.projectlombok:lombok:$lombokVersion"
 
-    testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
-    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
-    testImplementation "org.mockito:mockito-junit-jupiter:$mockitoVersion"
-    testImplementation "org.springframework:spring-test:$springVersion"
-    testImplementation "org.testcontainers:junit-jupiter:$testcontainersVersion"
-    testImplementation "org.testcontainers:postgresql:$testcontainersVersion"
+}
 
-
+war {
+    archiveFileName = 'car-dealership.war'
 }
 
 test {
