--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,13 @@
-logbackVersion=1.4.3
-lombokVersion=1.18.24
+logbackVersion=1.4.8
+lombokVersion=1.18.28
 mapstructVersion=1.5.3.Final
-springVersion=6.0.0-RC1
-springDataVersion=3.0.0-RC1
-junitVersion=5.8.1
-mockitoVersion=5.3.1
-testcontainersVersion=1.18.3
-hibernateVersion=6.1.4.Final
+jakartaApiVersion=9.1.0
+thymeleafVersion=3.1.1.RELEASE
+springVersion=6.0.10
+springDataVersion=3.1.1
+hibernateVersion=6.2.5.Final
 hikariVersion=5.0.1
-postgresqlVersion=42.5.1
-flywayVersion=9.19.1
+postgresqlVersion=42.6.0
+flywayVersion=9.20.0
 
 org.gradle.warning.mode=all
