--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
-    id 'war'
+    id 'org.springframework.boot' version "${springBootVersion}"
+    id 'io.spring.dependency-management' version "${springDependencyManagementVersion}"
 }
 
 group = 'pl.zajavka'
@@ -12,41 +13,24 @@ repositories {
 }
 
 dependencies {
-    implementation "ch.qos.logback:logback-classic:$logbackVersion"
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.flywaydb:flyway-core'
+    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
+    compileOnly 'org.projectlombok:lombok'
+    runtimeOnly 'org.postgresql:postgresql'
+    annotationProcessor 'org.projectlombok:lombok'
+    implementation "org.mapstruct:mapstruct:${mapstructVersion}"
+    annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
 
-    compileOnly "org.projectlombok:lombok:$lombokVersion"
-    annotationProcessor "org.projectlombok:lombok:$lombokVersion"
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
+    testImplementation 'org.springframework.security:spring-security-test'
+    testImplementation 'org.testcontainers:junit-jupiter'
+    testImplementation 'org.testcontainers:postgresql'
 
-    implementation "org.mapstruct:mapstruct:$mapstructVersion"
-    annotationProcessor "org.mapstruct:mapstruct-processor:$mapstructVersion"
-
-    implementation "org.springframework:spring-core:$springVersion"
-    implementation "org.springframework:spring-beans:$springVersion"
-    implementation "org.springframework:spring-context:$springVersion"
-    implementation "org.springframework:spring-context-support:$springVersion"
-    implementation "org.springframework:spring-expression:$springVersion"
-    implementation "org.springframework:spring-jdbc:$springVersion"
-    implementation "org.springframework:spring-tx:$springVersion"
-    implementation "org.springframework.data:spring-data-jpa:$springDataVersion"
-
-    compileOnly "jakarta.platform:jakarta.jakartaee-api:$jakartaApiVersion"
-    implementation "org.springframework:spring-webmvc:$springVersion"
-    implementation "org.thymeleaf:thymeleaf:$thymeleafVersion"
-    implementation "org.thymeleaf:thymeleaf-spring6:$thymeleafVersion"
-
-    implementation "org.hibernate.orm:hibernate-core:$hibernateVersion"
-    implementation "org.hibernate.orm:hibernate-hikaricp:$hibernateVersion"
-    implementation "com.zaxxer:HikariCP:$hikariVersion"
-    implementation "org.postgresql:postgresql:$postgresqlVersion"
-    implementation "org.flywaydb:flyway-core:$flywayVersion"
-
-    testCompileOnly "org.projectlombok:lombok:$lombokVersion"
-    testAnnotationProcessor "org.projectlombok:lombok:$lombokVersion"
-
-}
-
-war {
-    archiveFileName = 'car-dealership.war'
 }
 
 test {
