--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,5 @@
-logbackVersion=1.4.8
-lombokVersion=1.18.28
-mapstructVersion=1.5.3.Final
-jakartaApiVersion=9.1.0
-thymeleafVersion=3.1.1.RELEASE
-springVersion=6.0.10
-springDataVersion=3.1.1
-hibernateVersion=6.2.5.Final
-hikariVersion=5.0.1
-postgresqlVersion=42.6.0
-flywayVersion=9.20.0
+springBootVersion=3.1.1
+springDependencyManagementVersion=1.1.0
+mapstructVersion=1.5.5.Final
 
 org.gradle.warning.mode=all
