--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,14 @@
 springBootVersion=3.1.1
+openapiGeneratorVersion=6.2.1
 springDependencyManagementVersion=1.1.0
 mapstructVersion=1.5.5.Final
-
+lombokMapstructBindingVersion=0.2.0
+springDocOpenApiVersion=2.0.0
+jacksonDatabindingNullableVersion=0.2.4
+javaxAnnotationApiVersion=1.3.2
+swaggerAnnotationsVersion=2.2.15
+jsr305Version=3.0.2
+wiremockSlf4jVersion=2.0.5
+wiremockVersion=2.27.2
+restAssuredVersion=5.3.0
 org.gradle.warning.mode=all
