--- a/build.gradle
+++ b/build.gradle
@@ -2,18 +2,25 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version "${springBootVersion}"
     id 'io.spring.dependency-management' version "${springDependencyManagementVersion}"
-    id 'org.openapi.generator' version "${openapiGeneratorVersion}"
+    id "org.openapi.generator" version "${openapiGeneratorVersion}"
 }
 
 group = 'pl.zajavka'
 version = '1.0'
 sourceCompatibility = '17'
 
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+}
+
 repositories {
     mavenCentral()
 }
 
 dependencies {
+    // spring
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
@@ -21,36 +28,54 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-security'
 
+    //db
     implementation 'org.flywaydb:flyway-core'
     runtimeOnly 'org.postgresql:postgresql'
 
+    // annotations
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     implementation "org.mapstruct:mapstruct:${mapstructVersion}"
     annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
     annotationProcessor "org.projectlombok:lombok-mapstruct-binding:${lombokMapstructBindingVersion}"
 
+    // api
     implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${springDocOpenApiVersion}"
 
-    implementation "org.openapitools:jackson-databind-nullable:${jacksonDatabindingNullableVersion}"
+    // Po wygenerowaniu klienta, trzeba będzie dodać poniższe zależności, żeby kod się kompilował
+    implementation "org.openapitools:jackson-databind-nullable:${jacksonDatabindNullableVersion}"
     implementation "javax.annotation:javax.annotation-api:${javaxAnnotationApiVersion}"
-    implementation "io.swagger.core.v3:swagger-annotations:${swaggerAnnotationsVersion}"
+    implementation "io.swagger:swagger-annotations:${swaggerAnnotationsVersion}"
+
+    // warning: unknown enum constant When.MAYBE
+    // reason: class file for javax.annotation.meta.When not found
     implementation "com.google.code.findbugs:jsr305:${jsr305Version}"
 
-
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    // test
+    testCompileOnly 'org.projectlombok:lombok'
+    testAnnotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.security:spring-security-test'
-    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.testcontainers:junit-jupiter'
     testImplementation 'org.testcontainers:postgresql'
-    testAnnotationProcessor 'org.projectlombok:lombok'
-    testCompileOnly 'org.projectlombok:lombok'
 
+    // Integration tests
+    // Ta zależność musi być przed wiremock standalone
     testImplementation "org.slf4j:slf4j-api:${wiremockSlf4jVersion}"
     testImplementation "com.github.tomakehurst:wiremock-standalone:${wiremockVersion}"
     testImplementation "io.rest-assured:rest-assured:${restAssuredVersion}"
 }
 
+dependencyManagement {
+    imports {
+        mavenBom "org.testcontainers:testcontainers-bom:${testcontainersVersion}"
+    }
+}
+
+// https://github.com/OpenAPITools/openapi-generator/tree/master/modules
+// https://openapi-generator.tech/docs/generators/java/
+// https://openapi-generator.tech/docs/plugins
+// http://www.cepik.gov.pl/interfejs-dla-cepik
 openApiGenerate {
     generatorName = "java"
     library = "webclient"
@@ -59,7 +84,7 @@ openApiGenerate {
             dateLibrary         : "java8",
             serializationLibrary: "jackson"
     ]
-    outputDir = "$buildDir/generated-sources/openapi".toString();
+    outputDir = "$buildDir/generated-sources/openapi".toString()
     inputSpec = "$rootDir/src/main/resources/contracts/cepik-1.1.3.json".toString()
     apiPackage = "pl.zajavka.infrastructure.cepik.api"
     modelPackage = "pl.zajavka.infrastructure.cepik.model"
